Updated TADS API Docs. Fixed issue with JSON keys not being lowercase when validating.
